--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 <body>
     <form action="{{url_for('Summarize')}}" method="post">
         <textarea name="data" cols="30" rows="10" placeholder="Enter Your Data" required="required"></textarea>
-
+        <input type="range" min="20" max="1000" value="100" name="maxL">
+        <button type="submit">Clear</button>
         <button type="submit">Submit</button>
     </form>
 
